# BMP-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: ext.rs  main.rs  time_benchmark.rs
src/: bmp.rs  lib.rs  main.rs
