[package]
name = "bmp-rust"
version = "0.2.4"
authors = ["jetstream0 <prussia@prussia.dev>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/jetstream0/BMP-Rust"
description = "Rust library to read, write, and create BMP Image files"
homepage = "https://prussia.dev"
keywords = ["image", "bmp", "editing"]
categories = ["multimedia::images"]
exclude = [
  "example/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]